<resources>
    <string name="app_name">KotlinLearn</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="logoTitle">星河矿池</string>
    <string name="logoContentDescription">logo</string>
    <string name="loginPwHint">请输入密码</string>
    <string name="loginNameHint">请输入邮箱</string>
    <string name="loginDesc">行业领先的矿池管理平台</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">算力市场</string>
    <string name="title_dashboard">流动池</string>
    <string name="title_notifications">我的</string>
</resources>