<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


    <ImageView
        android:id="@+id/linearLayout"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/logoContentDescription"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toStartOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/logoTitle"
        android:textColor="#ff3C3C3C"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/loginDesc"
        android:textColor="#ff3c3c3c"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:hint="@string/loginPwHint"
        android:inputType="phone"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:textColor="#B2B2B2"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#B2B2B2"
        android:textColorLink="#B2B2B2"
        android:textIsSelectable="false"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="16sp"
        android:theme="@style/MyEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:hint="@string/loginNameHint"
        android:theme="@style/MyEditText"
        android:inputType="textPassword"
        android:textColor="#B2B2B2"
        android:textCursorDrawable="@drawable/cursor"
        android:textColorHint="#B2B2B2"
        android:textColorLink="#B2B2B2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button"
        style="@style/commonButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:background="@drawable/shape"
        android:text="登入"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />


</androidx.constraintlayout.widget.ConstraintLayout>